added color settings

--- a/system/config/config
+++ b/system/config/config
@@ -1,23 +1,35 @@
 {
-	{
-		3,
-	},
-	{
-		1,
-		1,
-		"Color",
-		"/system/images/icn_color"
-	},
-	{
-		2,
-		1,
-		"Clock",
-		"/system/images/icn_clock"
-	},
-	{
-		3,
-		1,
-		"Interface",
-		"/system/images/icn_interface"
-	},
+  {
+    3,
+  },
+  {
+    1,
+    1,
+    "Color",
+    "/system/images/icn_color",
+    "/system/config_color",
+    {
+      1,
+    },
+  },
+  {
+    2,
+    1,
+    "Clock",
+    "/system/images/icn_clock",
+    false,
+    {
+      true,
+    },
+  },
+  {
+    3,
+    1,
+    "Interface",
+    "/system/images/icn_interface",
+    false,
+    {
+      true,
+    },
+  },
 }
